update the schedule

--- a/index.html
+++ b/index.html
@@ -53,49 +53,50 @@
 
     <li><b>Week 5</b>: <em>Efficient Algorithms</em>
         <ul>
-            <li>10/27/2014: <a href="lecture06/index.html">Lecture 6</a></li>
-            <li>10/29/2014: Homework 2</li>
+            <li>10/27/2014: HW 1 Review 
+            <li>10/29/2014: Lecture 6</li>
         </ul>
     </li>
 
     <li><b>Week 6</b>: <em>Sorting and Searching</em>
         <ul>
-            <li>11/3/2014: <a href="lecture07/index.html">Lecture 7</a></li>
-            <li>11/5/2014: Homework 3</li>
+            <li>11/3/2014: Lecture 7</li>
+            <li>11/8/2014: HW 2 due</li>
         </ul>
     </li>
 
     <li><b>Week 7</b>: <em>Trees</em>
         <ul>
             <li>11/10/2014: Quiz 2</li>
-            <li>11/12/2014: <a href="lecture08/index.html">Lecture 8</a></li>
+            <li>11/12/2014: Lecture 8</li>
         </ul>
     </li>
 
     <li><b>Week 8</b>: <em>Hashing</em>
         <ul>
-            <li>11/17/2014:<a href="lecture09/index.html">Lecture 9</a></li>
-            <li>11/19/2014: Homework 4</li>
+            <li>11/17/2014: Lecture 9</li>
+            <li>11/22/2014: HW 3 due</li>
         </ul>
     </li>
 
     <li><b>Week 9</b>: <em>Graphs</em>
         <ul>
-            <li>11/24/2014:<a href="lecture10/index.html">Lecture 10</a></li>
-            <li>11/26/2014: Project</li>
+            <li>11/24/2014: Lecture 10</li>
+            <li>11/26/2014: Project Discussion</li>
         </ul>
     </li>
 
     <li><b>Week 10</b>: <em>Parallel Programming</em>
         <ul>
-            <li>12/1/2014: <a href="lecture11/index.html">Lecture 11</a></li>
-            <li>12/3/2014: Final Exam</li>
+            <li>12/1/2014: Lecture 11</li>
+            <li>12/3/2014: Quiz 3</li>
         </ul>
     </li>
 
     <li><b>Week 11</b>: <em>Project Demonstration</em>
         <ul>
             <li>12/10/2014: 7:30 - 10:00 PM</li>
+            <li>HW 4 due same time as project demonstration</li>
         </ul>
     </li>
 
