--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <li><b>Week 6</b>: <em>Sorting and Searching</em>
         <ul>
             <li>11/3/2014: Lecture 7</li>
-            <li>11/8/2014: HW 2 due</li>
+            <li>11/8/2014: <a href="homework02/index.html">HW 2</a> due</li>
         </ul>
     </li>
 
