fix typo and add clarification

--- a/homework02/index.html
+++ b/homework02/index.html
@@ -89,7 +89,7 @@ C 1 100.01 200.01 0.04
   40%	Valley Blvd
   25%	Garfield Ave
   10%	Rosemead Blvd
-c 2 102.10 200.2 0.09
+C 2 102.10 200.2 0.09
   100%  Rosemead Blvd
   10%   Garfield
   40%   Valley Blvd
@@ -98,7 +98,7 @@ c 2 102.10 200.2 0.09
 <p>Your report should report things as followed:</p>
 
 <ul>
-  <li>The first configuration that 100% coverage</li>
+  <li>The first configuration (combination of cell towers) that provides 100% coverage</li>
   <li>If there is no configurations with 100% coverage then print the configuration that has best coverage</li>
 </ul>
 
