--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
     <li><b>Week 10</b>: <em>Parallel Programming</em>
         <ul>
             <li>12/1/2014: Lecture 11</li>
-            <li>12/3/2014: Quiz 3</li>
+            <li>12/5/2014: Project Demonstration</li>
+            <li>HW 3, 4 due same time as project demonstration</li>
         </ul>
     </li>
 
-    <li><b>Week 11</b>: <em>Project Demonstration</em>
+    <li><b>Week 11</b>: <em>Final Exam</em>
         <ul>
-            <li>12/10/2014: 7:30 - 10:00 PM</li>
-            <li>HW 4 due same time as project demonstration</li>
+            <li>12/10/2014: Take home quiz 3</li>
         </ul>
     </li>
 
