final revision to the quiz

--- a/final/index.html
+++ b/final/index.html
@@ -26,7 +26,14 @@
   <li> Write the code for the <b>hasConnection(...) { ... }</b> method such that it determines if there is a connection between two names.  A connection can be direct or indirect.  For example, person A has a relationship with person B, and person B has a relationship with person C.  Therefore, person A has a connection to person C. </li>
 </ol>
 
-<p>You are <b>NOT</b> allowed to modify the abstract classes, i.e. <b>Graph</b>, <b>Edge</b>, and <b>Vertex</b>.  You may change <b>Person</b>, <b>Relationship</b>, and <b>SocialNetwork</b>.</p>
+<p>You are <b>NOT</b> allowed to modify the abstract classes, i.e. <b>Graph</b>, <b>Edge</b>, and <b>Vertex</b>.  You may change <b>Person</b>, <b>Relationship</b>, and <b>SocialNetwork</b>.  Your code must execute as followed.</p>
+
+<div class="code">java -jar quiz3
+</div>
+
+<p>The code as provided will read "network.txt" by default.  So you SHOULD NOT CHANGE <b>public static void main(String args[])</b>.  You are probably asking yourself, should I change <b>main(...)</b>?  The answer is NO!  In case you're wondering if it's necessary to change <b>main(...)</b>.  The answer is still NO!  You really really want to change <b>main(...)</b>.  Go ahead and do it. But do not submit that as the solution to the exam.  So finally, just a quick reminder, in case you are not aware, do not change <b>main(...)</b>.</p>
+
+<p>Submit all your source code, jar file, and your network.txt file.</p>
 
 <h3>Analysis Part</h3>
 
