--- a/final/index.html
+++ b/final/index.html
@@ -18,7 +18,7 @@
 
 <h3>Programming Part</h3>
 
-<p>Consider the source code here: <a href="https://github.com/csula/cs203-fall-2014/tree/master/src/quiz3">final</a>.  Your task is to write update the file <b>Relationship.java</b>:</p>
+<p>Consider the source code here: <a href="https://github.com/csula/cs203-fall-2014/tree/master/src/quiz3">final</a>.  Your task is to update the file <b>Relationship.java</b>:</p>
 
 <ol>
   <li> Write the code for the <b>SocialNetwork(...) { ... }</b> constructor such that it reads in the social network data file. </li>
@@ -41,7 +41,7 @@
 
 <p>2. What is the time complexity (use Big O) for determining if there is a connection between two names?</p>
 
-<p>3. Assuming that you can modify any of the classes, recommend a way in which we can improve the performance. Please be as detailed as possible.</p>
+<p>3. Assuming that you can modify any of the classes, recommend a way in which we can improve the performance. Please be as detail as possible.</p>
 
 </body>
 </html>
